# EuroCropsML-Meta-Learning

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
eurocropsmeta/: cli.py  settings.py  utils.py
eurocropsmeta/algorithms/: __init__.py  alfa.py  anil.py  base.py  inner_loop.py  maml.py  timl.py  utils.py
eurocropsmeta/dataset/: task.py  utils.py
eurocropsmeta/dataset/eurocrops/: meta.py  pretrain.py
eurocropsmeta/experiment/: base.py  cli.py  logger.py  meta.py  runs.py  transfer.py  tuning.py  utils.py
eurocropsmeta/experiment/eurocrops/: config.py  experiment.py  utils.py
eurocropsmeta/models/: base.py  encoder.py  location_encoding.py  positional_encoding.py  transformer.py
eurocropsmeta/train/: callback.py  meta_train.py  train.py  utils.py
experiments/common/model/: timl_encoder.yaml  timl_noencoder.yaml  transformer_big.yaml  transformer_small.yaml
experiments/eurocrops/config/: config.yaml  eurocrops.yaml
experiments/eurocrops/config/finetune/: finetune_base.yaml  head.yaml  headbackbonediff.yaml  headbackbonesame.yaml
experiments/eurocrops/config/pretrain/: meta_10_1.yaml  meta_10_10.yaml  meta_20_5.yaml  meta_4_1.yaml  meta_4_10.yaml  meta_base.yaml  pretrain.yaml  timl_10_1.yaml  timl_10_10.yaml  timl_4_1.yaml  timl_4_10.yaml  timl_base.yaml
requirements/: requirements.in
tests/: test_utils.py  utils.py
tests/algorithms/: conftest.py  test_alfa.py  test_anil.py  test_maml.py  test_utils.py
tests/dataset/: test_task.py  test_utils.py
tests/experiments/: conftest.py  test_base.py  test_cli.py  test_runs.py  test_tuning.py  test_utils.py
tests/models/: conftest.py  test_base.py  test_positional_encoding.py  test_transformer.py
