[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
    "hatch-fancy-pypi-readme>=23.2.0",
    "hatch-requirements-txt",
]
build-backend = "hatchling.build"

[project]
name = "eurocropsmeta"
authors = [
    { name = "Joana Reuss", email = "joana.reuss@tum.de" },
    { name = "Jan Macdonald", email = "jan.macdonald@dida.do" },
]
maintainers = [
    { name = "Joana Reuss", email = "joana.reuss@tum.de" },
    { name = "Jan Macdonald", email = "jan.macdonald@dida.do" },
]
license = "MIT"
description = "Transfer and meta-learning on EuroCropsML."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.urls]
GitHub = "https://github.com/jsreu/EuroCropsML-Meta-Learning"

[project.scripts]
eurocropsmeta-cli = "eurocropsmeta.cli:cli"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements/requirements.in"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
tests = ["requirements/requirements-tests.in"]
dev = [
    "requirements/requirements-tests.in",
    "requirements/requirements-dev.in",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
#start-after = "<!-- teaser-begin -->"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# make relative image links absolute
pattern = '!\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '![\g<1>](https://raw.githubusercontent.com/jsreu/EuroCropsML-Meta-Learning/main/\g<2>)'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# make relative non-image links absolute
pattern = '(?<!!)\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\g<1>](https://github.com/jsreu/EuroCropsML-Meta-Learning/tree/main/\g<2>)'

[tool.black]
target-version = ['py310']
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "A", "N", "B", "SIM", "C4", "TID", "NPY201"]
ignore = [
    "N806", # Non lower case variables in function
    "N802", # Non lower case function names
    "N812", # Non lower case function imports
    "E741", # Ambiguous variable name
    "TID252", # Preferring absolut imports over relatives
    "D213", # Multi-line docstring summary should start at the second line
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D202", # Blank lines after docstring
    "D203", # 1 blank line required before class docstring
    "D401", # First line should be in imperative mood; try rephrasing
    "D406", # Section name should end with a newline
    "D407", # Missing dashed underline after section
    "D106", # Missing docstring in public nested class
    "B006", # Do not use mutable data structures for argument defaults
    "B008", # Do not perform function calls in argument defaults
    "B905", # `zip()` without an explicit `strict=` parameter
    "D100", # Missing docstring in public module
    "D102", # Missing docstring in method
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "E402", "B011", "N802"]
"__init__.py" = ["D", "F401"]
"eurocropsmeta/models/presto_modules/*.py" = ["N801", "N803"]
"notebooks/*.py" = [
    "D",    # Make docstrings entirely optional
    "E402", # Module level import not at top of file
    "SIM115", # Use context handler for opening files
    "I", # Allow unordered imports
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = "tests"
filterwarnings = ["once::Warning"]

[tool.coverage.run]
parallel = true
branch = true
source_pkgs = ["eurocropsmeta"]

[tool.coverage.paths]
source = ["eurocropsmeta", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.interrogate]
omit-covered-files = true
verbose = 2
fail-under = 100
whitelist-regex = ["test_.*"]

[tool.check-wheel-contents]
toplevel = ["eurocropsmeta"]
